--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,181 @@
+@font-face {
+  font-family: Permanent;
+  src: url("./fonts/PermanentMarker-Regular.ttf") format("truetype");
+}
+
+/*
+body > * {
+  outline: 1px solid red;
+}
+
+body > * > * {
+  outline: 1px solid yellow;
+}
+
+body > * > * > * {
+  outline: 1px solid blue;
+}
+
+body > * > * > * > * {
+  outline: 1px solid green;
+}
+
+body > * > * > * > * > * {
+  outline: 1px solid rgb(255, 3, 171);
+}
+
+body > * > * > * > * > * > * {
+  outline: 1px solid brown;
+} */
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-image: url("../public/images/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+}
+
+.root {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+}
+
+.login-container {
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  max-width: 100%;
+  padding: 20px;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+}
+
+.login-input {
+  border: solid 1px rgba(230, 229, 229, 0.685);
+  margin-bottom: 20px;
+  padding: 12px 16px;
+}
+
+.button {
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  color: white;
+  cursor: pointer;
+  font-weight: 700;
+  height: 45px;
+  margin-bottom: 12px;
+  text-transform: uppercase;
+}
+
+.play-button {
+  background: #2fc18c;
+}
+
+.settings-button {
+  align-items: center;
+  background: #35906f;
+  display: flex;
+  justify-content: center;
+}
+
+.settings-button > img {
+  margin-right: 5px;
+}
+
+.play-button:disabled {
+  background-color: grey;
+  cursor: not-allowed;
+}
+
+header {
+  align-items: center;
+  background-color: white;
+  display: flex;
+  font-family: Permanent, cursive;
+  justify-content: space-between;
+  padding: 10px;
+
+  /* position: fixed; */
+  top: 0;
+  width: 100%;
+}
+
+header img {
+  border-radius: 50%;
+}
+
+.wrapper {
+  align-items: start;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  padding: 25px;
+}
+
+.question-category-container {
+  align-items: center;
+  background-color: white;
+  border-radius: 5px;
+
+  /* position: relative; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 32px;
+  padding: 10px;
+  text-align: center;
+}
+
+.category-container {
+  background-color: #00d5e2;
+  border-radius: 15px;
+  margin-bottom: 10px;
+  padding: 2px;
+
+  /* position: absolute; */
+  text-align: center;
+
+  /* top: -15px; */
+}
+
+.question-container {
+  border-radius: 5px;
+
+  /* position: absolute; */
+}
+
+.answers-container {
+  display: grid;
+}
+
+.answers-container > button {
+  background-color: rgba(141, 141, 141, 0.573);
+  color: rgb(255, 255, 255);
+}
+
+.next-button {
+  background: #2fc18c;
+  margin-top: 24px;
+  width: 100%;
+}
+
 .red {
   border: solid 3px red;
 }
