--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 @font-face {
-  font-family: Permanent;
-  src: url("./fonts/PermanentMarker-Regular.ttf") format("truetype");
+  font-family: Caveat;
+  src: url("./fonts/Caveat-VariableFont_wght.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: Roboto;
+  src: url("./fonts/Roboto-Regular.ttf") format("truetype");
 }
 
 /*
@@ -38,6 +43,7 @@ body {
   background-image: url("../public/images/background.png");
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: Roboto, serif;
   height: 100vh;
   width: 100vw;
 }
@@ -51,19 +57,19 @@ body {
 }
 
 .login-container {
-  background-color: white;
-  border-radius: 10px;
   display: flex;
   flex-direction: column;
   margin: auto;
   max-width: 100%;
-  padding: 20px;
 }
 
 .login-form {
+  background-color: white;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   max-width: 100%;
+  padding: 20px;
 }
 
 .login-input {
@@ -96,7 +102,7 @@ body {
 }
 
 .settings-button > img {
-  margin-right: 5px;
+  margin-right: 10px;
 }
 
 .play-button:disabled {
@@ -108,30 +114,48 @@ header {
   align-items: center;
   background-color: white;
   display: flex;
-  font-family: Permanent, cursive;
+  font-family: Caveat, cursive;
   justify-content: space-between;
-  padding: 10px;
-
-  /* position: fixed; */
+  padding: 10px 25px;
   top: 0;
   width: 100%;
 }
 
-header img {
+.header-score {
+  font-size: 2em;
+}
+
+.avatar {
   border-radius: 50%;
+  margin-left: 0.5em;
+  width: 40px;
+}
+
+.house-icon {
+  margin-right: 1em;
+  width: 40px;
+}
+
+.house-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin-right: 0;
+  padding: 0;
 }
 
 .wrapper {
-  align-items: start;
+  align-items: center;
   display: flex;
-  flex-direction: column;
-  justify-content: start;
+  flex-direction: row;
+  justify-content: center;
+  margin: auto;
   padding: 25px;
 }
 
 .question-category-container {
   align-items: center;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.903);
   border-radius: 5px;
 
   /* position: relative; */
@@ -139,6 +163,7 @@ header img {
   flex-direction: column;
   justify-content: center;
   margin-bottom: 32px;
+  margin-top: 12px;
   padding: 10px;
   text-align: center;
 }
@@ -146,19 +171,24 @@ header img {
 .category-container {
   background-color: #00d5e2;
   border-radius: 15px;
+  font-size: 1em;
   margin-bottom: 10px;
-  padding: 2px;
-
-  /* position: absolute; */
+  margin-top: -20px;
+  padding: 8px;
   text-align: center;
-
-  /* top: -15px; */
 }
 
 .question-container {
   border-radius: 5px;
+  font-size: 1.1em;
+  text-align: center;
 
   /* position: absolute; */
+}
+
+.question-logo {
+  margin: 0 30px;
+  width: 300px;
 }
 
 .answers-container {
@@ -166,8 +196,12 @@ header img {
 }
 
 .answers-container > button {
-  background-color: rgba(141, 141, 141, 0.573);
-  color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.903);
+  color: rgb(0, 0, 0);
+}
+
+.answers-container > button:hover {
+  background-color: rgb(6, 240, 15);
 }
 
 .next-button {
@@ -176,10 +210,142 @@ header img {
   width: 100%;
 }
 
-.red {
-  border: solid 3px red;
+.timer-button {
+  font-size: 1.2em;
+  pointer-events: none;
 }
 
-.green {
-  border: solid 3px rgb(6, 240, 15);
+.greenBoard {
+  border: solid 10px rgb(240, 6, 185);
+}
+
+.answers-container > button.red {
+  background-color: red;
+  color: white;
+}
+
+.answers-container > button.green {
+  background-color: rgb(6, 240, 15);
+}
+
+.answers-container > button:disabled {
+  pointer-events: none;
+}
+
+.feedback-card,
+.ranking-container,
+.settings-container {
+  align-items: center;
+  background: white;
+  border-radius: 5px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto 1em;
+  min-width: 300px;
+  padding: 2em;
+  text-align: center;
+}
+
+.feedback-card img {
+  border-radius: 50%;
+  margin-top: -200px;
+  width: 60px;
+}
+
+.feedback-text {
+  font-family: Caveat, cursive;
+  font-size: 4em;
+  line-height: 0.9em;
+}
+
+.score-text {
+  align-items: center;
+  display: flex;
+  font-family: Caveat, cursive;
+  font-size: 2em;
+}
+
+.score-text-number {
+  color: #35906f;
+  font-size: 2.1em;
+}
+
+.score-text-number-dark {
+  color: #23553f;
+  font-size: 2.1em;
+}
+
+.buttons-container {
+  padding-top: 1em;
+  width: 100%;
+}
+
+.feedback-card button {
+  width: 100%;
+}
+
+.ranking-container button {
+  margin-top: 1em;
+  width: 100%;
+}
+
+.player-info-container {
+  align-items: center;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  gap: 0.4em;
+  margin: 1em auto;
+}
+
+.ranking-title {
+  color: #23553f;
+  font-family: Caveat, cursive;
+  font-size: 3em;
+  margin-bottom: 0.5em;
+}
+
+.ranking-avatar {
+  border-radius: 50%;
+  width: 40px;
+}
+
+fieldset {
+  padding: 16px;
+  border: solid 1px #23553f;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+fieldset label {
+  margin-bottom: 1em;
+}
+
+fieldset .button {
+  margin-top: 2em;
+}
+
+.legend1 {
+  color: #23553f;
+  font-family: Caveat, cursive;
+  font-size: 2em;
+  margin-bottom: 0.5em;
+  margin-right: auto;
+}
+
+@media (width <= 600px) {
+  .avatar {
+    display: none;
+  }
+
+  .wrapper {
+    flex-direction: column;
+  }
+
+  .question-logo {
+    width: 80px;
+  }
 }
